--- a/job-details.css
+++ b/job-details.css
@@ -136,46 +136,12 @@ display: none;
 }
 
  
-.text-desc {
-    position: absolute;
-    top: 35%;
-    left: 40%;
-    text-align: center;
-}
-
-.text-desc h1 {
-    font-size: 3.6rem;
-    font-weight: 900;
-    line-height: 5rem;
-    color: white;
-}
-
-.text-desc button {
-    font-size: 0.8rem;
-    border: none;
-    background-color: white;
-    width: 50%;
-    padding: 0.5rem;
-    border-radius: 4rem;
-    color: #717275;
-}
-.text-desc button em {
-    color: #7f73eb;
-    font-style: normal;
-    font-weight: normal;
-}
  
  
-
-
- 
-
-
 .job-body {
     width: 100%;
     display: flex;
-    justify-content: space-between;
-}
+ }
 
 .job-info {
     flex-direction: column;
@@ -247,10 +213,11 @@ display: none;
     display: grid;
     grid-template-columns: repeat(3,1fr);
     gap: 1rem;
+    align-items: center;
 }
 .Job-Des{
     grid-column: 1 /span 2;
-}
+ }
 .jobs .job-title {
     width: 50%;
     height: 141px;
@@ -271,15 +238,15 @@ display: none;
 }
 
 .Job-Des ul li {
-    color: #717275;
+  
+     color: #717275;
     line-height: 2rem;
 }
 
 .google {
     margin-top: -2rem;
     padding: 2rem;
-    width: 300px;
-    display: flex;
+     display: flex;
     background-color: white;
     box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.1);
     width: 100%;
@@ -898,8 +865,7 @@ display: none;
 
     .job-Description{
         grid-template-columns: 1fr;
-        gap: 5rem;
-
+ 
     }
     .job-btn a {
         padding: 10px 15px;
@@ -918,8 +884,7 @@ display: none;
         flex-direction: column;
         gap: 1rem;
         font-size: 1rem;
-        font-weight: normal;
-
+ 
     }
 
     
@@ -967,13 +932,15 @@ display: none;
       .top-box .job-badge{
       bottom: 10%;
       }
-      .job-Description {
-        width: 100%;
-        align-items: center;
-    }
+   
+    
       .google {
-         width:370px;
-    }
+        
+        width: 380px;
+        height: auto;
+        margin-top: 5rem;
+
+      }
  
        /* Cta Section */
        .cta-section{
